# openrelik-worker-kstrike

./: .dockerignore  .gitignore  Dockerfile  LICENSE-UAL-TIMELINER  README.md  bootstrap.sh  openrelik.yaml  pyproject.toml
src/: kstrike.py  tasks.py
tests/: test_tasks.py
