[project]
authors = [
    {name = "Kevin Stokes", email = "kev365@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "celery[redis]<6.0.0,>=5.4.0",
    "openrelik-worker-common<1.0.0,>=0.16.0",
    "libesedb-python",
    "polars>=1.0.0",
    "openpyxl>=3.0.0",
]
name = "openrelik-worker-kstrike"
version = "0.2.0"
description = "UAL parsing with KStrike and forensic timeline generation with UAL Timeliner for Windows Server User Access Logging."
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
test = [
    "pytest",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-mock<4.0.0,>=3.14.0",
]

[tool.uv]
default-groups = []
